# dagmar

./: .gitignore  README.md  pyproject.toml
src/dagmar/: cli.py  logging_config.py  md_fixer.py  my_qdrant_vector_store.py  parse_filter_string.py  server.py  splitters.py  store.py  store_document.py
src/dagmar/splitters/: __init__.py  base.py  csv.py  image_to_md_prompt.md  llm_base.py  md.py  pdf.py  pdf_llm.py  pptx.py  txt.py
